--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "super alpha version lol",
   "main": "scratch.js",
   "dependencies": {
+    "fill-range": "^3.1.1",
     "chance": "^1.0.6",
     "bresenham-js": "^0.0.0"
   },
   "devDependencies": {
-    "fill-range": "^3.1.1"
+
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
